@@ -175,6 +175,10 @@ table th
 .flexigrid div.sDiv2 input,.flexigrid div.sDiv2 select {
 	vertical-align:middle;
 }
+.flexigrid.crud-form select
+{
+	min-width: 200px;
+}
 .flexigrid div.btnseparator {
 	float:left;
 	height:22px;
